Style and Structure header

--- a/assets/sass/1-tools/_vars.sass
+++ b/assets/sass/1-tools/_vars.sass
@@ -32,7 +32,12 @@ $black:  #111
 // Add whatever variables you would like made available to the whole app
 //
 
+$off-white: #fffff3
+
 $dark: #566270
 $highlight: #177e87
 $text: #6A7480
 $light-grey: #979797
+$border: #CFD6DF
+
+
