--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -184,13 +184,30 @@ th {
   padding: 0; }
 
 body {
-  background-color: white;
+  background-color: #fffff3;
   font-size: 14px;
   line-height: 1.6;
   font-family: sans-serif;
   color: #666;
   -webkit-font-smoothing: antialiased;
-  -webkit-text-size-adjust: 100%; }
+  -webkit-text-size-adjust: 100%;
+  font-family: "proxima-nova", sans-serif; }
+
+* {
+  box-sizing: border-box; }
+
+.filter {
+  background: rgba(86, 98, 112, 0.55);
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  right: 0;
+  left: 0; }
+
+.wrapper-wide {
+  margin: 0 auto;
+  width: 1440px;
+  max-width: 90%; }
 
 ::selection {
   background: #FFF498; }
@@ -210,14 +227,16 @@ body {
 a {
   color: #0074D9;
   text-decoration: none;
-  outline: 0; }
+  outline: 0;
+  transition: all 300ms; }
   a:hover, a:focus {
     color: #40a6ff; }
 
 .gigantic, .huge, .large, .bigger, .big,
 h1, h2, h3, h4, h5, h6 {
   color: #222;
-  font-weight: bold; }
+  font-weight: bold;
+  font-family: "futura-pt", sans-serif; }
 
 .gigantic {
   font-size: 110px;
@@ -269,20 +288,19 @@ input[type="button"] {
   display: inline-block;
   height: 38px;
   padding: 0 30px;
-  color: #555;
+  color: #fffff3;
   text-align: center;
-  font-size: 11px;
   font-weight: 600;
+  font-size: 1.3em;
   line-height: 38px;
   letter-spacing: 0.1rem;
   text-transform: uppercase;
   text-decoration: none;
   white-space: nowrap;
   background-color: transparent;
-  border-radius: 4px;
-  border: 1px solid #bbb;
+  border: 1px solid #CFD6DF;
   cursor: pointer;
-  box-sizing: border-box; }
+  font-family: "futura-pt", sans-serif; }
   .button:hover, .button:active, .button:focus,
   button:hover,
   button:active,
@@ -296,134 +314,64 @@ input[type="button"] {
   input[type="button"]:hover,
   input[type="button"]:active,
   input[type="button"]:focus {
-    color: #333;
-    border-color: #888;
+    color: #111;
+    border-color: #111;
     outline: 0; }
+  .button.button-highlight,
+  button.button-highlight,
+  input[type="submit"].button-highlight,
+  input[type="reset"].button-highlight,
+  input[type="button"].button-highlight {
+    background: #177e87;
+    border-color: #177e87; }
+    .button.button-highlight:hover,
+    button.button-highlight:hover,
+    input[type="submit"].button-highlight:hover,
+    input[type="reset"].button-highlight:hover,
+    input[type="button"].button-highlight:hover {
+      color: #fffff3;
+      opacity: 0.69; }
 
-.countdown {
-  text-align: center;
-  margin: 25vh 0 2em;
-  width: 100%; }
-  .countdown .countdown-item {
-    display: inline-block;
-    width: 25%;
-    position: relative; }
-    .countdown .countdown-item p {
-      color: #fff;
-      margin: 0 0 -10px 0;
-      padding: 0;
-      font-size: 8em;
-      line-height: 1;
-      font-family: "ostrich-sans-black", sans-serif; }
-      @media (max-width: 1115px) {
-        .countdown .countdown-item p {
-          font-size: 6em; } }
-      @media (max-width: 840px) {
-        .countdown .countdown-item p {
-          font-size: 4.5em; } }
-      @media (max-width: 520px) {
-        .countdown .countdown-item p {
-          font-size: 3em; } }
-    .countdown .countdown-item:before {
-      content: "";
-      background: url(../../assets/img/arrow-right.svg);
+header {
+  background: #566270;
+  padding: 20px 2rem; }
+  header::after {
+    clear: both;
+    content: "";
+    display: table; }
+  header #logo {
+    float: left; }
+    header #logo img {
       display: block;
-      width: 36px;
-      height: 76px;
-      position: absolute;
-      top: 20px;
-      left: -10px;
-      color: #111; }
-      @media (max-width: 1115px) {
-        .countdown .countdown-item:before {
-          top: 10px; } }
-      @media (max-width: 840px) {
-        .countdown .countdown-item:before {
-          background-size: cover;
-          width: 16px;
-          height: 36px;
-          top: 20px; } }
-      @media (max-width: 520px) {
-        .countdown .countdown-item:before {
-          width: 10px;
-          height: 21px;
-          left: 0px;
-          top: 20px; } }
-    .countdown .countdown-item:first-child:before {
-      content: none; }
-    .countdown .countdown-item em {
-      font-size: 1.8em;
-      line-height: 1.2;
-      text-transform: uppercase;
-      color: #f2f2f2; }
-      @media (max-width: 840px) {
-        .countdown .countdown-item em {
-          font-size: 1em; } }
+      width: 260px;
+      height: auto;
+      margin-top: 7px; }
+  header nav {
+    float: right; }
+    header nav a {
+      margin-left: 10px; }
+      header nav a:first-of-type {
+        margin: 0; }
 
-body {
-  background-color: black;
-  overflow-x: hidden;
-  background-image: url(../../assets/img/background.jpg);
+.hero {
+  background-image: url(../../assets/img/hero.jpg);
   background-size: cover;
-  min-height: 100vh; }
-
-.rock-wrap {
+  overflow: hidden;
+  min-height: 320px;
   text-align: center;
-  width: 1180px;
-  max-width: 90%;
-  margin: 0 auto;
-  padding-top: 50px; }
-  .rock-wrap .logo {
-    color: #fff;
-    text-transform: uppercase;
-    display: block;
-    margin-bottom: 0;
-    font-size: 4.5em;
-    text-align: center;
-    font-family: "ostrich-sans-bold", sans-serif; }
-    @media (max-width: 600px) {
-      .rock-wrap .logo {
-        font-size: 2.5em; } }
-  .rock-wrap h2 {
-    margin: 0;
-    color: #fff;
-    font-weight: normal;
-    text-transform: uppercase;
-    font-size: 2em; }
-  .rock-wrap section {
-    max-width: 800px;
-    margin: 50px auto;
-    position: relative;
-    padding: 10px;
-    border: 1px solid #fff; }
-    @media (max-width: 600px) {
-      .rock-wrap section {
-        margin: 50px 1.5%; } }
-  .rock-wrap img {
-    max-width: 100%;
-    display: block; }
-
-.social-icon-wrap {
-  position: fixed;
-  bottom: 0px;
-  left: 0;
-  right: 0;
-  background: black;
-  padding: 0.5% 0; }
-  .social-icon-wrap a {
-    display: inline-block;
-    color: white;
-    margin-right: 10px;
-    font-size: 1.8em; }
-    .social-icon-wrap a:last-child {
-      margin-right: 0; }
-    .social-icon-wrap a.twitter:hover {
-      color: #55acee; }
-    .social-icon-wrap a.facebook:hover {
-      color: #3c5a96; }
-    .social-icon-wrap a.instagram:hover {
-      color: #c93c9f; }
-    .social-icon-wrap a.snapchat:hover {
-      color: #fffa37; }
+  background-color: #111;
+  position: relative; }
+  .hero h1 {
+    color: #fffff3;
+    font-size: 3.5em;
+    margin-top: 120px;
+    letter-spacing: 1px; }
+  .hero .button-highlight {
+    height: 50px;
+    line-height: 50px; }
+    .hero .button-highlight:hover {
+      opacity: 1;
+      background-color: #566270;
+      border-color: #566270; }
 
 /*# sourceMappingURL=main.css.map */
