--- a/assets/sass/2-basics/_body-element.sass
+++ b/assets/sass/2-basics/_body-element.sass
@@ -1,8 +1,25 @@
 body
-  background-color: white
-  font-size: 14px
-  line-height: 1.6
-  font-family: sans-serif
-  color: #666
-  -webkit-font-smoothing: antialiased
-  -webkit-text-size-adjust: 100%
+	background-color: $off-white
+	font-size: 14px
+	line-height: 1.6
+	font-family: sans-serif
+	color: #666
+	-webkit-font-smoothing: antialiased
+	-webkit-text-size-adjust: 100%
+	font-family: "proxima-nova", sans-serif
+
+*
+	box-sizing: border-box
+
+.filter
+	background: transparentize($dark, .45)
+	position: absolute
+	bottom: 0
+	top: 0
+	right: 0
+	left: 0
+
+.wrapper-wide
+	margin: 0 auto
+	width: 1440px
+	max-width: 90%
