--- a/assets/sass/2-basics/_typography.sass
+++ b/assets/sass/2-basics/_typography.sass
@@ -4,6 +4,8 @@
 h1, h2, h3, h4, h5, h6
   color: #222
   font-weight: bold
+  font-family: "futura-pt", sans-serif
+
 
 .gigantic
   font-size: 110px
