--- a/assets/sass/4-pages/_page-home.sass
+++ b/assets/sass/4-pages/_page-home.sass
@@ -1,71 +1,39 @@
-body
-  background-color: black
-  overflow-x: hidden
-  background-image: url(../../assets/img/background.jpg)
+header
+  background: $dark
+  padding: 20px 2rem
+  +clearfix 
+  #logo
+    float: left
+    img
+      display: block
+      width: 260px
+      height: auto
+      margin-top: 7px
+  nav
+    float: right
+    a
+      margin-left: 10px
+      &:first-of-type
+        margin: 0
+
+// Hero Section
+.hero
+  background-image: url(../../assets/img/hero.jpg)
   background-size: cover
-  min-height: 100vh
-
-.rock-wrap
+  overflow: hidden
+  min-height: 320px
   text-align: center
-  width: 1180px
-  max-width: 90%
-  margin: 0 auto
-  padding-top: 50px
-
-  .logo
-    color: $white
-    text-transform: uppercase
-    display: block
-    margin-bottom: 0
-    font-size: 4.5em
-    text-align: center
-    font-family: "ostrich-sans-bold", sans-serif
-    @media (max-width: 600px)
-      font-size: 2.5em
-  h2
-    margin: 0
-    color: $white
-    font-weight: normal
-    text-transform: uppercase
-    font-size: 2em
-  section
-    max-width: 800px
-    margin: 50px auto
-    position: relative
-    padding: 10px
-    border: 1px solid $white
-    @media (max-width: 600px)
-      margin: 50px 1.5%
-
-  img
-    max-width: 100%
-    display: block
-
-
-
-.social-icon-wrap
-  position: fixed
-  bottom: 0px
-  left: 0
-  right: 0
-  background: black
-  padding: .5% 0
-  a
-    display: inline-block
-    color: white
-    margin-right: 10px
-    font-size: 1.8em
-    &:last-child
-      margin-right: 0
-    &.twitter
-      &:hover
-        color: #55acee // Twitter blue
-    &.facebook
-      &:hover
-        color: #3c5a96 // Facebook blue
-    &.instagram
-      &:hover
-        color: #c93c9f // This could be better
-    &.snapchat
-      &:hover
-        color: #fffa37 // Snapchat yellow
+  background-color: $black
+  position: relative
+  h1
+    color: $off-white
+    font-size: 3.5em
+    margin-top: 120px
+    letter-spacing: 1px
+  .button-highlight
+    height: 50px
+    line-height: 50px
+    &:hover
+      opacity: 1
+      background-color: $dark
+      border-color: $dark
