--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -2,7 +2,7 @@
 
 
 // 1 - TOOLS
-//@import '1-tools/bourbon/bourbon'
+@import '1-tools/bourbon/bourbon'
 @import '1-tools/fonts'
 @import '1-tools/normalize'
 @import '1-tools/vars'
@@ -13,11 +13,10 @@
 @import '2-basics/selection-colors'
 @import '2-basics/links'
 @import '2-basics/typography'
-@import '2-basics/example-buttons'
+@import '2-basics/buttons'
 
 
 // 3 - Modules
-@import '3-modules/countdown'
 
 
 // 4 - pages
