Add style and structure to content on homepage

--- a/assets/sass/2-basics/_body-element.sass
+++ b/assets/sass/2-basics/_body-element.sass
@@ -1,9 +1,9 @@
 body
 	background-color: $off-white
-	font-size: 14px
+	font-size: 16px
 	line-height: 1.6
 	font-family: sans-serif
-	color: #666
+	color: $text
 	-webkit-font-smoothing: antialiased
 	-webkit-text-size-adjust: 100%
 	font-family: "proxima-nova", sans-serif
@@ -18,6 +18,15 @@ body
 	top: 0
 	right: 0
 	left: 0
+
+.wrapper
+	min-height: 100%
+	height: auto !important
+	height: 100%
+	margin: 0 auto
+	width: 860px
+	max-width: 90%
+
 
 .wrapper-wide
 	margin: 0 auto
