--- a/assets/sass/2-basics/_buttons.sass
+++ b/assets/sass/2-basics/_buttons.sass
@@ -31,7 +31,12 @@ input[type="button"]
   &.button-highlight
     background: $highlight
     border-color: $highlight
+    color: $off-white
     &:hover
-      color: $off-white
-      opacity: .69
+      opacity: 1
+      background-color: $dark
+      border-color: $dark
+  &.button-big
+    height: 50px
+    line-height: 50px
 
