--- a/assets/sass/4-pages/_page-home.sass
+++ b/assets/sass/4-pages/_page-home.sass
@@ -37,3 +37,32 @@ header
       opacity: 1
       background-color: $dark
       border-color: $dark
+
+// Home page content section
+
+.content
+  padding: 80px 0
+  h2
+    text-transform: uppercase
+    color: $dark
+    text-align: center
+    font-size: 2.4em
+    margin-top: 0
+
+  .featured-trainer
+    text-align: center
+    img
+      width: 140px
+      border-radius: 50%
+    h3, .title
+      line-height: .9
+      margin: 0
+      font-family: "proxima-nova", sans-serif
+
+    .title
+      font-size: .85em
+      text-transform: uppercase
+      color: $light-grey
+      margin-bottom: 1em
+    h4
+      margin-bottom: .5em
