Addition of modal

--- a/assets/sass/1-tools/_vars.sass
+++ b/assets/sass/1-tools/_vars.sass
@@ -32,9 +32,10 @@ $black:  #111
 // Add whatever variables you would like made available to the whole app
 //
 
-$off-white: #fffff3
+$off-white: #fffffc
 
-$dark: #566270
+// Previous - $dark: #566270
+$dark: #3A424C
 $highlight: #177e87
 $text: #6A7480
 $light-grey: #979797
