--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -6,6 +6,7 @@
 @import '1-tools/fonts'
 @import '1-tools/normalize'
 @import '1-tools/vars'
+@import '1-tools/modal'
 
 
 // 2 - BASICS
@@ -14,10 +15,12 @@
 @import '2-basics/links'
 @import '2-basics/typography'
 @import '2-basics/buttons'
+@import '2-basics/form'
 
 
 // 3 - Modules
 @import '3-modules/footer'
+@import '3-modules/modal-layout'
 
 // 4 - pages
 @import '4-pages/page-home'
