--- a/assets/sass/2-basics/_form.sass
+++ b/assets/sass/2-basics/_form.sass
@@ -5,4 +5,8 @@ input[type="text"], input[type="email"], textarea
 	border: 2px solid $border
 	padding: 1em
 	margin: .5em 0 2em 0
+	outline: 0
+
+	&:active, &:focus
+		border-color: $highlight
 
