--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -422,7 +422,10 @@ input[type="text"], input[type="email"], textarea {
   height: 3em;
   border: 2px solid #CFD6DF;
   padding: 1em;
-  margin: 0.5em 0 2em 0; }
+  margin: 0.5em 0 2em 0;
+  outline: 0; }
+  input[type="text"]:active, input[type="text"]:focus, input[type="email"]:active, input[type="email"]:focus, textarea:active, textarea:focus {
+    border-color: #177e87; }
 
 footer {
   background-color: #E0E3DA;
