Style and structure signup page

--- a/assets/sass/2-basics/_form.sass
+++ b/assets/sass/2-basics/_form.sass
@@ -1,4 +1,4 @@
-input[type="text"], input[type="email"], textarea
+input[type="text"], textarea
 	width: 100%
 	max-width: 100%
 	height: 3em
@@ -9,4 +9,16 @@ input[type="text"], input[type="email"], textarea
 
 	&:active, &:focus
 		border-color: $highlight
+
+// Screen reader text
+
+.srt
+	border: 0
+	clip: rect(0 0 0 0)
+	height: 1px
+	margin: -1px
+	overflow: hidden
+	padding: 0
+	position: absolute
+	width: 1px
 
