--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -416,7 +416,7 @@ input[type="button"] {
     height: 50px;
     line-height: 50px; }
 
-input[type="text"], input[type="email"], textarea {
+input[type="text"], textarea {
   width: 100%;
   max-width: 100%;
   height: 3em;
@@ -424,8 +424,18 @@ input[type="text"], input[type="email"], textarea {
   padding: 1em;
   margin: 0.5em 0 2em 0;
   outline: 0; }
-  input[type="text"]:active, input[type="text"]:focus, input[type="email"]:active, input[type="email"]:focus, textarea:active, textarea:focus {
+  input[type="text"]:active, input[type="text"]:focus, textarea:active, textarea:focus {
     border-color: #177e87; }
+
+.srt {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px; }
 
 footer {
   background-color: #E0E3DA;
@@ -487,7 +497,10 @@ footer {
 
 header {
   background: #3A424C;
-  padding: 20px 2rem; }
+  padding: 20px 2rem;
+  position: fixed;
+  width: 100%;
+  z-index: 1; }
   header::after {
     clear: both;
     content: "";
@@ -510,14 +523,14 @@ header {
   background-image: url(../../assets/img/hero.jpg);
   background-size: cover;
   overflow: hidden;
-  min-height: 320px;
+  min-height: 340px;
   text-align: center;
   background-color: #111;
   position: relative; }
   .hero h1 {
     color: #fffffc;
     font-size: 3.5em;
-    margin-top: 120px;
+    margin-top: 140px;
     letter-spacing: 1px; }
   .hero .button-highlight {
     height: 50px;
@@ -551,5 +564,84 @@ header {
       margin-bottom: 1em; }
     .content .featured-trainer h4 {
       margin-bottom: 0.5em; }
+
+#signup-page {
+  background-color: transparent; }
+
+.signup-body {
+  background-image: url(../../assets/img/signup-bg.jpg);
+  min-height: 100vh;
+  background-size: cover;
+  background-position: 50% 50%;
+  overflow: hidden; }
+  .signup-body .signup-card {
+    width: 760px;
+    max-width: 90%;
+    background: rgba(58, 66, 76, 0.8);
+    position: relative;
+    vertical-align: middle;
+    display: block;
+    z-index: 1;
+    margin: 100px auto 0;
+    padding: 1.5em 2.5%; }
+    .signup-body .signup-card h2 {
+      color: #fffffc;
+      font-size: 1.8em;
+      text-align: center; }
+    .signup-body .signup-card form .half-input {
+      width: 48.2%;
+      display: inline-block;
+      margin-right: 20px; }
+      .signup-body .signup-card form .half-input:nth-child(4), .signup-body .signup-card form .half-input:nth-child(3n+4) {
+        margin-right: 0; }
+      @media (max-width: 800px) {
+        .signup-body .signup-card form .half-input {
+          width: 100%;
+          display: block; } }
+    .signup-body .signup-card form pre {
+      text-align: center;
+      color: #fffffc; }
+    .signup-body .signup-card form input, .signup-body .signup-card form input[type="email"] {
+      background: transparent;
+      border-top: 0;
+      border-right: 0;
+      border-left: 0;
+      border-bottom: 1px solid #fffffc;
+      color: #fffffc; }
+      .signup-body .signup-card form input::-webkit-input-placeholder, .signup-body .signup-card form input[type="email"]::-webkit-input-placeholder {
+        color: #fffffc; }
+      .signup-body .signup-card form input::-moz-placeholder, .signup-body .signup-card form input[type="email"]::-moz-placeholder {
+        color: #fffffc; }
+      .signup-body .signup-card form input:-moz-placeholder, .signup-body .signup-card form input[type="email"]:-moz-placeholder {
+        color: #fffffc; }
+      .signup-body .signup-card form input:-ms-input-placeholder, .signup-body .signup-card form input[type="email"]:-ms-input-placeholder {
+        color: #fffffc; }
+    .signup-body .signup-card form input[type="submit"] {
+      background: #177e87;
+      border: 2px solid #177e87;
+      margin: 0 auto;
+      display: block;
+      transition: all 300ms; }
+      .signup-body .signup-card form input[type="submit"]:hover {
+        background: #3A424C;
+        border-color: #3A424C; }
+    .signup-body .signup-card form .facebook-button {
+      display: block;
+      width: 100%;
+      background: #4c66a4;
+      color: #fffffc;
+      padding: 1em;
+      margin-bottom: 1em;
+      text-align: center;
+      font-size: 1.3em;
+      cursor: pointer; }
+      .signup-body .signup-card form .facebook-button:hover {
+        background: #3c5081; }
+      .signup-body .signup-card form .facebook-button p {
+        display: inline;
+        font-weight: bold; }
+
+.inline-block {
+  display: inline-block; }
 
 /*# sourceMappingURL=main.css.map */
