--- a/assets/sass/4-pages/_page-home.sass
+++ b/assets/sass/4-pages/_page-home.sass
@@ -1,6 +1,9 @@
 header
   background: $dark
   padding: 20px 2rem
+  position: fixed
+  width: 100%
+  z-index: 1
   +clearfix 
   #logo
     float: left
@@ -21,14 +24,14 @@ header
   background-image: url(../../assets/img/hero.jpg)
   background-size: cover
   overflow: hidden
-  min-height: 320px
+  min-height: 340px
   text-align: center
   background-color: $black
   position: relative
   h1
     color: $off-white
     font-size: 3.5em
-    margin-top: 120px
+    margin-top: 140px
     letter-spacing: 1px
   .button-highlight
     height: 50px
