--- a/assets/sass/2-basics/_buttons.sass
+++ b/assets/sass/2-basics/_buttons.sass
@@ -39,3 +39,6 @@ input[type="button"]
   &.button-big
     height: 50px
     line-height: 50px
+  &.button-huge
+    height: 75px
+    line-height: 75px
