--- a/assets/sass/4-pages/_page-home.sass
+++ b/assets/sass/4-pages/_page-home.sass
@@ -13,11 +13,18 @@ header
       height: auto
       margin-top: 8px
   nav
+    +clearfix
     float: right
     a
       margin-left: 10px
       &:first-of-type
         margin: 0
+      .profile-image
+        width: 38px
+        border-radius: 50%
+        max-width: 100%
+        float: left
+        margin-right: 5px
 
 // Hero Section
 .hero
