--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -604,12 +604,16 @@ header {
     vertical-align: middle;
     display: block;
     z-index: 1;
-    margin: 100px auto 0;
+    margin: 100px auto 50px;
     padding: 1.5em 2.5%; }
-    .signup-body .signup-card h2 {
+    .signup-body .signup-card h2, .signup-body .signup-card h3 {
       color: #fffffc;
-      font-size: 1.8em;
       text-align: center; }
+    .signup-body .signup-card h2 {
+      font-family: 1.8em; }
+    .signup-body .signup-card h3 {
+      font-size: 1.6em;
+      text-transform: uppercase; }
     .signup-body .signup-card form .half-input {
       width: 48.2%;
       display: inline-block;
@@ -618,6 +622,16 @@ header {
         margin-right: 0; }
       @media (max-width: 800px) {
         .signup-body .signup-card form .half-input {
+          width: 100%;
+          display: block; } }
+    .signup-body .signup-card form .third-input {
+      width: 30.9%;
+      display: inline-block;
+      margin-right: 20px; }
+      .signup-body .signup-card form .third-input:last-of-type {
+        margin: 0; }
+      @media (max-width: 800px) {
+        .signup-body .signup-card form .third-input {
           width: 100%;
           display: block; } }
     .signup-body .signup-card form pre {
@@ -647,6 +661,9 @@ header {
       .signup-body .signup-card form input[type="submit"]:hover {
         background: #3A424C;
         border-color: #3A424C; }
+    .signup-body .signup-card form textarea {
+      background: transparent;
+      min-height: 250px; }
     .signup-body .signup-card form .facebook-button {
       display: block;
       width: 100%;
